# Sample-qt-project-on-cmake

./: generate_msvc15 2017.example.cmd
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/src/: main.cpp
src/application/src/application_widget/: application_widget.cpp  application_widget.hpp  application_widget.ui
